app and home changed

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,9 +19,7 @@
       <li id="name">
         Krishi Mitra
       </li>
-      <li>
-        <a href="home">Home</a>
-      </li>
+
       <li>
         <a href="crop">Crop</a>
       </li>
@@ -68,39 +66,8 @@
 
   </div>
   <br>
-  <!--Cards
-  <div class="mainCards">
-    <br> <br>
-    <div class="row">
-
-      <div class="col-sm-3" style="margin-left:8cm;">
-        <div class="card" style="width: 18rem;">
-          <img src="static/images/wheat.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Crop</h5>
-              <p class="card-text"></p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-              
-      <div class="col-sm-3">
-        <div class="card" style="width: 18rem;">
-          <img src="static/images/fertilizer.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Fertilizers</h5>
-                <p class="card-text"></p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-      </div>    
-             
-    </div>
-
-  </div>
-  -->
-
-<!--New Cards-->
+  
+<!--Cards-->
 <section class="campus">
   <h1>What can you predict</h1>
   
@@ -133,12 +100,12 @@
   <h4>About Us</h4>
   <p>We are Engineering students. This is an attemts to help farmers for better choice for crop, to increase yield using technology. </p>
   <div class="icons">
-    <a href="http://www.linkedin.com/in/chinmay-deshmukh-662253188" target="_blank">
+    <a href="https://www.linkedin.com/in/kunal-gaikwad-7a6869194/" target="_blank">
       <i class="fab fa-linkedin fa-3x"></i>
     </a>
-    <p>Email: chinmay.deshmukh18@vit.edu</p>
+
   </div>
-  <p>Made by Team CK2A</p>
+  <p>Author: Kunal Gaikwad</p>
 </section>
 
 
