--- a/static/css/home.css
+++ b/static/css/home.css
@@ -48,54 +48,7 @@ body{
     text-align: center;
 }
 
-/*.flip-card{
-  width: 300px;
-  height: 300px;
-  margin:auto;
-}
-
-.flip-card-back{
-  background-color:white;
-  color: black;
-  transform: rotateY('180deg');
-  z-index: 1;
-
-}
-.flip-card-front img{
-  width: 200px;
-  height: 200px;
-}
-.flip-card-back .back-header{
-  height: 45%;
-  text-align: center;
-}
-
-.flip-card-back .back-header img{
-  width: 50%;
-  margin-top: 20px;
-}
-
-.flip-card-inner{
-  position: relative;
-  height: 100%;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-
-}
-
-.flip-card-back, .flip-card-front
-{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}  
-
-.flip-card:hover .flip-card-back{
-  transform: rotateY(180deg);
-}*/
-
-/*New cards*/
+/*cards*/
 .campus
 {
     width: 80%;
